force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__ApiVersion__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ApiVersion__c</fullName>
    <label>API Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>