force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ExceptionMessage__c</fullName>
    <label>Exception Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>