force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ExceptionType__c</fullName>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>