force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LimitsAggregateQueryMax__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsAggregateQueryMax__c</fullName>
    <label>Limits AggregateQueryMax_</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>