force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LimitsAsyncCallsMax__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsAsyncCallsMax__c</fullName>
    <label>Async Calls Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>