force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LimitsAsyncCallsUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsAsyncCallsUsed__c</fullName>
    <label>Async Calls Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>