force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LimitsDmlRowsUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsDmlRowsUsed__c</fullName>
    <label>DML Rows Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>