force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LimitsDmlStatementsUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsDmlStatementsUsed__c</fullName>
    <label>DML Statements Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>