force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LimitsEmailInvocationsUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsEmailInvocationsUsed__c</fullName>
    <label>Email Invocations Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>