force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LimitsFutureCallsMax__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsFutureCallsMax__c</fullName>
    <label>Future Calls Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>