force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LimitsFutureCallsUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsFutureCallsUsed__c</fullName>
    <label>Future Calls Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>