force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LimitsMobilePushApexCallsMax__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsMobilePushApexCallsMax__c</fullName>
    <label>Mobile Push Apex Calls Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>