force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LimitsMobilePushApexCallsUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsMobilePushApexCallsUsed__c</fullName>
    <label>Mobile Push Apex Calls Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>