force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LimitsSoqlQueryLocatorRowsMax__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsSoqlQueryLocatorRowsMax__c</fullName>
    <label>SOQL Query Locator Rows Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>