force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__Locale__c.field-meta.xml
<CustomField>
    <fullName>Nebula__Locale__c</fullName>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>