force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LoggingLevel__c</fullName>
    <label>Logging Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>