force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LoginApplication__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LoginApplication__c</fullName>
    <label>Login Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>