force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LoginPlatform__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LoginPlatform__c</fullName>
    <label>Login Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>