force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LoginType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LoginType__c</fullName>
    <label>Login Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>