force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__LogoutUrl__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LogoutUrl__c</fullName>
    <label>Logout URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>