force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__Message__c.field-meta.xml
<CustomField>
    <fullName>Nebula__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>