force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__MessageTruncated__c.field-meta.xml
<CustomField>
    <fullName>Nebula__MessageTruncated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Message Truncated</label>
    <type>Checkbox</type>
</CustomField>