force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__NetworkLoginUrl__c.field-meta.xml
<CustomField>
    <fullName>Nebula__NetworkLoginUrl__c</fullName>
    <label>Site Login URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>