force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__OrganizationEnvironmentType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__OrganizationEnvironmentType__c</fullName>
    <label>Organization Environment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>