force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__OrganizationInstanceName__c.field-meta.xml
<CustomField>
    <fullName>Nebula__OrganizationInstanceName__c</fullName>
    <label>Organization Instance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>