force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__OrganizationNamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>Nebula__OrganizationNamespacePrefix__c</fullName>
    <label>Organization Namespace Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>