force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__OrganizationType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__OrganizationType__c</fullName>
    <label>Organization Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>