force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__OriginType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__OriginType__c</fullName>
    <label>Origin Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>