force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__ParentLogTransactionId__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ParentLogTransactionId__c</fullName>
    <label>Parent Log Transaction ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>