force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__RecordCollectionType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__RecordCollectionType__c</fullName>
    <label>Related Record Collection Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>