force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__RecordId__c.field-meta.xml
<CustomField>
    <fullName>Nebula__RecordId__c</fullName>
    <description>The ID of the record associated with a particular log entry. This is used for addRecordDebugEntry &amp; addRecordExceptionEntry methods</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>