force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__SessionSecurityLevel__c.field-meta.xml
<CustomField>
    <fullName>Nebula__SessionSecurityLevel__c</fullName>
    <label>Session Security Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>