force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__SessionType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__SessionType__c</fullName>
    <label>Session Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>