force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__SourceIp__c.field-meta.xml
<CustomField>
    <fullName>Nebula__SourceIp__c</fullName>
    <label>Source IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>