force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>Nebula__StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>