force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__SystemMode__c.field-meta.xml
<CustomField>
    <fullName>Nebula__SystemMode__c</fullName>
    <label>System Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>