force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__ThemeDisplayed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ThemeDisplayed__c</fullName>
    <label>Theme Displayed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>