force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Nebula__Timestamp__c</fullName>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>