force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__TransactionId__c.field-meta.xml
<CustomField>
    <fullName>Nebula__TransactionId__c</fullName>
    <label>Transaction ID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>