force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__TriggerOperationType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__TriggerOperationType__c</fullName>
    <label>Trigger Operation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>