force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__UserLicenseName__c.field-meta.xml
<CustomField>
    <fullName>Nebula__UserLicenseName__c</fullName>
    <label>User License Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>