force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__UserRoleId__c.field-meta.xml
<CustomField>
    <fullName>Nebula__UserRoleId__c</fullName>
    <label>User Role ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>