force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__UserRoleName__c.field-meta.xml
<CustomField>
    <fullName>Nebula__UserRoleName__c</fullName>
    <label>User Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>