force-app/main/default/objects/Nebula__LogEntryEvent__e/fields/Nebula__UserType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__UserType__c</fullName>
    <label>User Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>